--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./imgs/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/media.css">
     <title>Lobo Guará</title>
 </head>
 <body>
     <header>
-       <h1>Lobo-guará</h1> 
-       <p>Um símbolo da fauna brasileira</p>
+       <h1 class="titulo">Lobo-guará</h1> 
+       <p class="titulo">Um símbolo da fauna brasileira</p>
     </header> 
     <main>
         <section class="apresentacao">
